  for the first time since 1.21.17 (now my toolchain is working).
- Platforms: SYS calls on RISC OS can call the Brandy_* calls from within
  the interpreter in addition to the RISC OS native calls.
  OS_SWINumerFromString is intercepted to also recognise the Brandy_* calls.
- System: pthreads used for timer thread on non-SDL (and non-RISC OS) builds.
- BASIC: Unsigned 8-bit data type (var&) implemented.
- BASIC: Overflowing a 32-bit integer variable will now raise an error
  instead of silently wrapping. (uint8 variables will wrap.)
- BASIC: OLD keyword now reports Unsupported. It never worked properly and
  in Brandy it is rather pointless.
- BASIC: DELETE keyword now requires at least one parameter.
- BASIC: Lowercase immediate mode commands no longer allowed, unless compiled
  with -DBRANDY_ALLOW_LOWERCASE_COMMANDS

* V1.22.6 - 19 June 2020
- BASIC: Implemented BB4W/BBCSDL extension GET(x,y) and GET$(x,y)
- BASIC: Fixed TINT, both function and command as they were rather broken.
- System: Some subtle bugs fixed as a result of clang compiler warnings.
- System: Block attempts to free workspace memory that shouldn't be randomly
  freed.
- System: INKEY(-256) now returns &4D (M) for all builds. System specifics
  can be obtained from SYS "Brandy_Platform".
- System: OSBYTE &87 implemented for non-MODE7 screen modes. (MODE 7
  was previously implemented)
- System: Now builds on MacOS High Sierra and Catalina. Note, it requires
  the latest snapshot of SDL 1.2 from SDL's Mercurial repository.
- System: Bug fixes for *SAVE and *LOAD. Additionally, MODE 7 screens
  can now be *SAVEd and *LOADed.
- System/Display: Several bugs fixed, highlighted by Jan Vibe's graphical demos.
- Display: Some optimisations in the scaled blitting code.
- Display: Added a hugely optimised code path for scrolling, when no VDU28
  window is in place, and not MODE 7.
- Display: VDU23,7 implemented apart from movement option.