@@ -8,6 +8,9 @@ ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
   the interpreter in addition to the RISC OS native calls.
   OS_SWINumerFromString is intercepted to also recognise the Brandy_* calls.
 - System: pthreads used for timer thread on non-SDL (and non-RISC OS) builds.
+- System: Timer uses monotomic clock instead of gettimeofday().
+- System: *EXEC now interruptable with ESCAPE, and not aborted on other
+  errors.
 - BASIC: Unsigned 8-bit data type (var&) implemented.
 - BASIC: Overflowing a 32-bit integer variable will now raise an error
   instead of silently wrapping. (uint8 variables will wrap.)
